extends Control
class_name DialogueUI

signal dialogue_finished
signal dialogue_advanced

var current_npc: DialogueNPC = null
var is_showing: bool = false

@onready var panel: Panel = $Panel
@onready var speaker_label: Label = $Panel/VBoxContainer/SpeakerLabel
@onready var dialogue_label: Label = $Panel/VBoxContainer/DialogueLabel
@onready var continue_prompt: Label = $Panel/VBoxContainer/ContinuePrompt

func _ready() -> void:
	visible = false
	is_showing = false
	print("ğŸ’¬ DialogueUI inicializado")
	
	if not panel:
		push_error("âŒ Panel no encontrado")
	if not speaker_label:
		push_error("âŒ SpeakerLabel no encontrado")
	if not dialogue_label:
		push_error("âŒ DialogueLabel no encontrado")
	if not continue_prompt:
		push_error("âŒ ContinuePrompt no encontrado")

func _input(event: InputEvent) -> void:
	if not is_showing or not visible:
		return
	
	if event.is_action_pressed("ui_accept"):
		print("ğŸ’¬ Presionaste E")
		_advance_dialogue()
		get_viewport().set_input_as_handled()
	
	if event.is_action_pressed("ui_cancel"):
		_force_close()
		get_viewport().set_input_as_handled()

func show_dialogue(npc: DialogueNPC) -> void:
	if not npc:
		push_error("âŒ NPC es null")
		return
	
	if npc.dialogue_lines.is_empty():
		push_warning("âš ï¸ ", npc.npc_name, " no tiene lÃ­neas de diÃ¡logo")
		return
	
	current_npc = npc
	is_showing = true
	visible = true
	
	# ğŸ”§ ASEGURAR QUE EMPIECE EN 0
	current_npc.current_line = 0
	
	print("ğŸ’¬ Mostrando diÃ¡logo de: ", npc.npc_name)
	print("ğŸ’¬ Total lÃ­neas: ", npc.dialogue_lines.size())
	
	# ğŸ”§ MOSTRAR LA PRIMERA LÃNEA INMEDIATAMENTE
	_update_display()

func _update_display() -> void:
	if not current_npc:
		print("âš ï¸ current_npc es null")
		return
	
	# ğŸ”§ VERIFICAR ÃNDICE VÃLIDO
	if current_npc.current_line >= current_npc.dialogue_lines.size():
		push_error("âŒ Ãndice fuera de rango: ", current_npc.current_line)
		return
	
	# Actualizar nombre
	if speaker_label:
		speaker_label.text = current_npc.npc_name
	
	# Obtener lÃ­nea actual
	var line = current_npc.dialogue_lines[current_npc.current_line]
	
	# Actualizar texto
	if dialogue_label:
		dialogue_label.text = line
	
	# Actualizar prompt
	if continue_prompt:
		# Si es la Ãºltima lÃ­nea
		if current_npc.current_line >= current_npc.dialogue_lines.size() - 1:
			continue_prompt.text = "â–¼ Presiona E para cerrar"
		else:
			continue_prompt.text = "â–¼ Presiona E para continuar"
	
	print("ğŸ’¬ Mostrando lÃ­nea ", current_npc.current_line, "/", current_npc.dialogue_lines.size() - 1, ": ", line)

func _advance_dialogue() -> void:
	if not current_npc:
		return
	
	print("ğŸ’¬ Avanzando desde lÃ­nea: ", current_npc.current_line)
	
	# ğŸ”§ PRIMERO VERIFICAR SI ES LA ÃšLTIMA LÃNEA
	if current_npc.current_line >= current_npc.dialogue_lines.size() - 1:
		# Era la Ãºltima lÃ­nea, cerrar
		print("ğŸ’¬ Era la Ãºltima lÃ­nea, cerrando...")
		_close_dialogue()
	else:
		# Hay mÃ¡s lÃ­neas, avanzar
		current_npc.current_line += 1
		print("ğŸ’¬ Avanzando a lÃ­nea: ", current_npc.current_line)
		_update_display()
		dialogue_advanced.emit()

func _close_dialogue() -> void:
	print("ğŸ’¬ Cerrando diÃ¡logo")
	visible = false
	is_showing = false
	
	if current_npc:
		current_npc.current_line = 0
		current_npc.stop_interaction()
		current_npc = null
	
	dialogue_finished.emit()

func _force_close() -> void:
	print("ğŸ’¬ DiÃ¡logo forzado a cerrar (ESC)")
	_close_dialogue()
